[0.1h] replace Collectors.toList() with .toList() in vacation mode resource and scene mapper